# TradeAggregate

./: Aggregator.cpp  Aggregator.h  CMakeLists.txt  FileWriter.cpp  FileWriter.h  Main.cpp  Printer.h  README.md  Scraper.cpp  Scraper.h  endpoints.json  main.cpp
